discussion/kv_engine/166622/166622_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49767: Fix and enhance logging in EPBucket::flushVBucket_UNLOCKED

Update the log messages in EPBucket::flushVBucket_UNLOCKED to log the
fact there from EPBucket::flushVBucket_UNLOCKED not
EPBucket::flushVBucket(). Also enhance the log messages for the high
completed/prepare seqno exceptions for when a flush tries to break their
monotonic property. By adding extra information regarding the min and
max seqno's that are meant to be flushed to disk and what the proposed
vbucket state was going to be.

Change-Id: I72231a6ffa475e6b963d816dbf63ac3a0ce4bbb5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-12-01 11:22:34.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-01 11:36:10.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35734/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_bucket.cc:766:21:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35734/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42117/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_bucket.cc(766): error C2059: syntax error: "," ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42117/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14269/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_bucket.cc:766:21: error: expected expression [clang-diagnostic-error]
                    ,
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14269/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_bucket.cc:766:21:
error: expected expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14269/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3901/ : FAILURE

Compile error at [2021-12-01T11:23:45.273Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_bucket.cc:766:21:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3901/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15894/ : FAILURE

Compile error at [2021-12-01T11:24:43.216Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_bucket.cc:754:35:
error: expected primary-expression before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15894/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16183/ : FAILURE

Compile error at [2021-12-01T11:25:01.807Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_bucket.cc:754:35:
error: expected primary-expression before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16183/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16957/ : FAILURE

Compile error at [2021-12-01T11:24:16.734Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_bucket.cc:766:21:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16957/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24280/ : FAILURE

Compile error at [2021-12-01T11:24:33.719Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_bucket.cc:766:21:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24280/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3976/ : FAILURE

Compile error at [2021-12-01T11:26:20.495Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@8/kv_engine/engines/ep/src/ep_bucket.cc:754:35:
error: expected primary-expression before ?(? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3976/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15067/ : FAILURE

Compile error at [2021-12-01T11:32:00.820Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/ep_bucket.cc:766:21:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15067/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13075/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
